termino prueba de que conat es concurrent monoid

--- a/doc/latex/Instances/ConcurrentMonoid.tex
+++ b/doc/latex/Instances/ConcurrentMonoid.tex
@@ -1455,23 +1455,25 @@
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
-\AgdaFunction{∼→≤}%
-\>[1071I]\AgdaSymbol{(}\AgdaFunction{transitive-∼}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
+\AgdaFunction{∼→≤}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaFunction{transitive-∼}%
+\>[1072I]\AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{+}}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{))}\<%
 \\
-\>[.][@{}l@{}]\<[1071I]%
-\>[33]\AgdaSymbol{((}\AgdaFunction{symmetric-∼}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[1072I]%
+\>[47]\AgdaSymbol{((}\AgdaFunction{symmetric-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{a}\AgdaSymbol{)))}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{+-cong}}\<%
+\AgdaBound{a}\AgdaSymbol{)))}\<%
 \\
-\>[33][@{}l@{\AgdaIndent{0}}]%
-\>[34]\AgdaSymbol{(}\AgdaFunction{symmetric-∼}\AgdaSpace{}%
+%
+\>[47]\AgdaOperator{\AgdaFunction{+-cong}}\<%
+\\
+%
+\>[47]\AgdaSymbol{(}\AgdaFunction{symmetric-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max-right-identity}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{))))}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
@@ -1481,7 +1483,7 @@
 %<*icaso6>
 \begin{code}%
 \>[0]\AgdaFunction{interchange}%
-\>[1084I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[1083I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
@@ -1490,33 +1492,35 @@
 \AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1084I]%
+\>[.][@{}l@{}]\<[1083I]%
 \>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
-\AgdaSymbol{→}%
+\AgdaSymbol{.}\AgdaField{force}%
+\>[1094I]\AgdaSymbol{→}%
 \>[30]\AgdaFunction{transitive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{∼→≤}%
-\>[1097I]\AgdaSymbol{((}\AgdaFunction{+-right-identity}\AgdaSpace{}%
+\>[1096I]\AgdaSymbol{((}\AgdaFunction{+-right-identity}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{a}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{max-cong}}\<%
+\AgdaBound{a}\AgdaSymbol{))}\<%
 \\
-\>[1097I][@{}l@{\AgdaIndent{0}}]%
-\>[61]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
+\>[1096I][@{}l@{\AgdaIndent{0}}]%
+\>[49]\AgdaOperator{\AgdaFunction{max-cong}}\<%
+\\
+%
+\>[49]\AgdaSymbol{(}\AgdaFunction{reflexive-∼}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{))))}\<%
 \\
-%
-\>[30]\AgdaSymbol{(}\AgdaFunction{transitive-≤}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{max≤+}\AgdaSpace{}%
+\>[1094I][@{}l@{\AgdaIndent{0}}]%
+\>[29]\AgdaSymbol{(}\AgdaFunction{transitive-≤}%
+\>[1101I]\AgdaSymbol{(}\AgdaFunction{max≤+}\AgdaSpace{}%
 \AgdaSymbol{\{\AgdaUnderscore{}\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{\})}\<%
 \\
-%
-\>[30]\AgdaSymbol{(}\AgdaFunction{ˡ≤max}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[1101I]%
+\>[43]\AgdaSymbol{(}\AgdaFunction{ˡ≤max}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaInductiveConstructor{zero}\AgdaSpace{}%
@@ -1529,7 +1533,7 @@
 %<*icaso7> 
 \begin{code}%
 \>[0]\AgdaFunction{interchange}%
-\>[1113I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[1111I]\AgdaSymbol{\{}\AgdaBound{i}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
@@ -1539,14 +1543,14 @@
 \AgdaBound{d}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1113I]%
+\>[.][@{}l@{}]\<[1111I]%
 \>[12]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
-\AgdaSymbol{→}%
-\>[1126I]\AgdaFunction{transitive-≤}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{interchange}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaFunction{transitive-≤}%
+\>[1125I]\AgdaSymbol{(}\AgdaFunction{interchange}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{suc}\AgdaSpace{}%
@@ -1555,26 +1559,30 @@
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{d}\AgdaSymbol{))}\<%
 \\
-\>[.][@{}l@{}]\<[1126I]%
-\>[29]\AgdaSymbol{((}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
+\>[.][@{}l@{}]\<[1125I]%
+\>[42]\AgdaSymbol{((}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{max}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaInductiveConstructor{zero}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{+-mono}}\<%
+\AgdaInductiveConstructor{zero}\AgdaSymbol{))}\<%
 \\
 %
-\>[29]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
+\>[42]\AgdaOperator{\AgdaFunction{+-mono}}\<%
+\\
+%
+\>[42]\AgdaInductiveConstructor{suc}\AgdaSpace{}%
 \AgdaSymbol{λ}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaSymbol{.}\AgdaField{force}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
+\AgdaSymbol{→}%
+\>[1141I]\AgdaSymbol{(}\AgdaFunction{reflexive-≤}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{force}\AgdaSpace{}%
-\AgdaBound{b}\AgdaSymbol{))}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{max-mono}}\AgdaSpace{}%
+\AgdaBound{b}\AgdaSymbol{))}\<%
+\\
+\>[.][@{}l@{}]\<[1141I]%
+\>[59]\AgdaOperator{\AgdaFunction{max-mono}}\AgdaSpace{}%
 \AgdaFunction{pred≤}%
-\>[86]\AgdaSymbol{\})}\AgdaSpace{}%
+\>[75]\AgdaSymbol{\})}\AgdaSpace{}%
 \AgdaSymbol{\}}\<%
 \end{code}
 %</icaso7>
@@ -1617,14 +1625,14 @@
 \\
 \>[0]\AgdaFunction{eq-∼}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[1177I]\AgdaKeyword{record}\AgdaSpace{}%
+\>[1173I]\AgdaKeyword{record}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{refl}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{reflexive-∼}\AgdaSpace{}%
 \AgdaSymbol{\AgdaUnderscore{}}\<%
 \\
-\>[1177I][@{}l@{\AgdaIndent{0}}]%
+\>[1173I][@{}l@{\AgdaIndent{0}}]%
 \>[13]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{sym}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1652,18 +1660,18 @@
 \>[0]\AgdaFunction{partial-≤}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaKeyword{record}%
-\>[1200I]\AgdaSymbol{\{}\AgdaSpace{}%
+\>[1196I]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{isPreorder}\AgdaSpace{}%
 \AgdaSymbol{=}\<%
 \\
-\>[.][@{}l@{}]\<[1200I]%
+\>[.][@{}l@{}]\<[1196I]%
 \>[19]\AgdaKeyword{record}%
-\>[1203I]\AgdaSymbol{\{}\AgdaSpace{}%
+\>[1199I]\AgdaSymbol{\{}\AgdaSpace{}%
 \AgdaField{isEquivalence}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{eq-∼}\<%
 \\
-\>[1203I][@{}l@{\AgdaIndent{0}}]%
+\>[1199I][@{}l@{\AgdaIndent{0}}]%
 \>[27]\AgdaSymbol{;}\AgdaSpace{}%
 \AgdaField{reflexive}\AgdaSpace{}%
 \AgdaSymbol{=}\AgdaSpace{}%
@@ -1701,9 +1709,9 @@
 \\
 \>[0]\AgdaFunction{conatConcurrent}\AgdaSpace{}%
 \AgdaSymbol{=}%
-\>[1225I]\AgdaInductiveConstructor{makeConcurrentMonoid}\<%
+\>[1221I]\AgdaInductiveConstructor{makeConcurrentMonoid}\<%
 \\
-\>[1225I][@{}l@{\AgdaIndent{0}}]%
+\>[1221I][@{}l@{\AgdaIndent{0}}]%
 \>[20]\AgdaSymbol{(}\AgdaOperator{\AgdaDatatype{[}}\AgdaSpace{}%
 \AgdaPostulate{∞}\AgdaSpace{}%
 \AgdaOperator{\AgdaDatatype{]\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSymbol{)}\<%
