--- a/doc/tex/form.tex
+++ b/doc/tex/form.tex
@@ -159,35 +159,35 @@ Antes de pasar a las leyes de las mónadas, se introduce la compatibilidad del o
 
 Los campos \AgdaField{monad$_1$}, \AgdaField{monad$_2$} y \AgdaField{monad$_3$} representan las tres leyes de mónadas y son iguales a los campos \AgdaField{law$_1$}, \AgdaField{law$_2$} y \AgdaField{law$_3$} de \AgdaRecord{Monad}. Los primeros dos indican que \AgdaField{return} es neutro a derecha e izquierda de \AgdaField{$\gg=$} y el último indica la asociatividad de dicho operador.
 
-Una vez establecida la estructura monádica, se pasa a introducir la estructura monoidal que se requiere en la definición \ref{def:monmonord} para que la mónada sea una mónada monoidal ordenada. El elemento neutro es un morfismo $e : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Como se mencionó anteriormente, el objeto terminal $\mathbf{1} = \{\star\} \in \text{\bf ob Set}$ se representa en Agda como el tipo \AgdaDatatype{$\top$}, cuyo único habitante es \AgdaInductiveConstructor{tt}. Al ser un conjunto de un único elemento, al igual que en el caso de la formalización de funtor monoidal, $e$ se define como un campo \AgdaField{unit} de tipo \AgdaBound{M} \AgdaDatatype{$\top$} en lugar de como una función de tipo \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$} ya que hay un único argumento posible para la función. Según la definición \ref{def:monconc}, para que la mónada sea una mónada concurrente, el morfismo $e$ debe ser igual a $\eta_{\mathbf{1}} : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Considerando $\mathbf{1} =$ \AgdaDatatype{$\top$}, luego $e$ debería ser igual a \AgdaField{return} \AgdaSymbol{\{}\AgdaDatatype{$\top$}\AgdaSymbol{\} :} \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$}. Como \AgdaDatatype{$\top$} tiene un único habitante, se obtiene que \AgdaField{unit} debe ser igual a \AgdaField{return} \AgdaInductiveConstructor{tt} \AgdaSymbol{:} \AgdaBound{M} \AgdaDatatype{$\top$}. {\color{red} Cómo defino unit = return tt? dentro de la estructura?}
+Una vez establecida la estructura monádica, se pasa a introducir la estructura monoidal que se requiere en la definición \ref{def:monmonord} para que la mónada sea una mónada monoidal ordenada. El elemento neutro es un morfismo $e : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Como se mencionó anteriormente, el objeto terminal $\mathbf{1} = \{\star\} \in \text{\bf ob Set}$ se representa en Agda como el tipo \AgdaDatatype{$\top$}, cuyo único habitante es \AgdaInductiveConstructor{tt}. Al ser un conjunto de un único elemento, al igual que en el caso de la formalización de funtor monoidal, $e$ se define como un habitante \AgdaFunction{unit} del tipo \AgdaBound{M} \AgdaDatatype{$\top$} en lugar de como una función de tipo \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$} ya que hay un único argumento posible para la función. Según la definición \ref{def:monconc}, para que la mónada sea una mónada concurrente, el morfismo $e$ debe ser igual a $\eta_{\mathbf{1}} : \mathbf{1} \rightarrow \mathit{M} \mathbf{1}$. Considerando $\mathbf{1} =$ \AgdaDatatype{$\top$}, luego $e$ debería ser igual a \AgdaField{return} \AgdaSymbol{\{}\AgdaDatatype{$\top$}\AgdaSymbol{\} :} \AgdaDatatype{$\top$} \AgdaSymbol{$\rightarrow$} \AgdaBound{M} \AgdaDatatype{$\top$}. Como \AgdaDatatype{$\top$} tiene un único habitante, se obtiene que \AgdaFunction{unit} debe ser igual a \AgdaField{return} \AgdaInductiveConstructor{tt} \AgdaSymbol{:} \AgdaBound{M} \AgdaDatatype{$\top$}. Como ya queda definido el valor de \AgdaFunction{unit}, no se define como un campo sino como una constante.
 
-Continuando con la estructura monoidal, el siguiente campo es la función \AgdaField{merge}, la cual representa la transformación natural $m$. Este campo está definido de igual manera que el \AgdaField{merge} de \AgdaRecord{MonoidalFunctor}. En dicha estructura, a continuación del \AgdaField{merge} se introduce el campo \AgdaField{fmap}, el cual representa la asignación de morfismos a morfismos del funtor $\mathit{M}$. En el caso de las mónadas concurrentes este campo no es necesario puesto que puede construirse tal asignación a partir del operador \AgdaField{$\gg=$}. Sea \AgdaBound{f} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{$\rightarrow$}  \AgdaBound{B} una función, luego (\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} $f$ \AgdaBound{a})) es una función de tipo \AgdaBound{M A} \AgdaSymbol{$\rightarrow$} \AgdaBound{M B}. De esta manera la asignación de morfismos a morfismos del funtor queda definida. {\color{red} Comentario: demostrar equivalencia? Se demostraría para un caso particular igual, no? Porque no tengo una definición de fmap concreta acá} 
+Continuando con la estructura monoidal, el siguiente campo es la función \AgdaField{merge}, la cual representa la transformación natural $m$. Este campo está definido de igual manera que el \AgdaField{merge} de \AgdaRecord{MonoidalFunctor}. En dicha estructura, a continuación del \AgdaField{merge} se introduce el campo \AgdaField{fmap}, el cual representa la asignación de morfismos a morfismos del funtor $\mathit{M}$. En el caso de las mónadas concurrentes este campo no es necesario puesto que puede construirse tal asignación a partir del operador \AgdaField{$\gg=$}. Sea \AgdaBound{f} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{$\rightarrow$}  \AgdaBound{B} una función, luego (\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} $f$ \AgdaBound{a})) es una función de tipo \AgdaBound{M A} \AgdaSymbol{$\rightarrow$} \AgdaBound{M B}. De esta manera la asignación de morfismos a morfismos del funtor queda definida. 
 
 El campo que sigue, \AgdaField{mcomp$\lesssim_m$}, representa la compatibilidad del operador \AgdaField{merge} con la relación de orden \AgdaField{$\lesssim_m$}. Dados \AgdaBound{a$_1$} y \AgdaBound{a$_2$} de tipo \AgdaBound{M A} y \AgdaBound{b$_1$} y \AgdaBound{b$_2$} de tipo \AgdaBound{M B}, si se tiene que \hbox{\AgdaBound{a$_1$} \AgdaField{$\lesssim_m$} \AgdaBound{a$_2$}} y \AgdaBound{b$_1$} \AgdaField{$\lesssim_m$} \AgdaBound{b$_2$}, luego se debe cumplir que (\AgdaField{merge} \AgdaBound{a$_1$ b$_1$}) \AgdaField{$\lesssim_m$} (\AgdaField{merge} \AgdaBound{a$_2$ b$_2$}). 
 
-Es el turno ahora de las propiedades que deben cumplirse para que \AgdaField{merge} y \AgdaField{unit} formen una estructura monoidal. Estas propiedades son tres y están definidas de manera similar a las de la formalización de funtor monoidal, salvo por el uso del campo \AgdaField{fmap}. \AgdaField{idr} representa la proposición que indica que \AgdaField{unit} es un neutro a derecha del operador \AgdaField{merge}. En el \AgdaKeyword{record} \AgdaRecord{MonoidalFunctor} esta propiedad tiene tipo \hbox{\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$} (\AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a})}. Reemplazando \AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) por la función propuesta anteriormente, donde se sustituye $f$ por (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})), quedaría el siguiente tipo: 
+Es el turno ahora de las propiedades que deben cumplirse para que \AgdaField{merge} y \AgdaFunction{unit} formen una estructura monoidal. Estas propiedades son tres y están definidas de manera similar a las de la formalización de funtor monoidal, salvo por el uso del campo \AgdaField{fmap}. \AgdaField{idr} representa la proposición que indica que \AgdaFunction{unit} es un neutro a derecha del operador \AgdaField{merge}. En el \AgdaKeyword{record} \AgdaRecord{MonoidalFunctor} esta propiedad tiene tipo \hbox{\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge} \AgdaFunction{unit} \AgdaBound{a}) \AgdaField{$\cong_m$} (\AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a})}. Reemplazando \AgdaField{fmap} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) por la función propuesta anteriormente, donde se sustituye $f$ por (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})), quedaría el siguiente tipo: 
 \begin{center}
-\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$}  \\ ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a})) \AgdaBound{a})
+\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge} \AgdaFunction{unit} \AgdaBound{a}) \AgdaField{$\cong_m$}  \\ ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a})) \AgdaBound{a})
 \end{center}
 
 Si se reduce la aplicación (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})) \AgdaBound{a}, se obtiene un tipo un poco más reducido:
 \begin{center}
-\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$} ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt}))) \AgdaBound{a})
+\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge} \AgdaFunction{unit} \AgdaBound{a}) \AgdaField{$\cong_m$} ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt}))) \AgdaBound{a})
 \end{center}
 
 Si se reduce finalmente la aplicación (\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt}))) \AgdaBound{a}, se obtiene el tipo del campo \AgdaField{idr} en la estructura:
 \begin{center}
-\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge unit} \AgdaBound{a}) \AgdaField{$\cong_m$} (\AgdaBound{a} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})))
+\AgdaSymbol{$\forall$} \{\AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) \AgdaSymbol{$\rightarrow$} (\AgdaField{merge} \AgdaFunction{unit} \AgdaBound{a}) \AgdaField{$\cong_m$} (\AgdaBound{a} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{, tt})))
 \end{center}
 
-De manera análoga, si se reemplaza \AgdaField{fmap} por su versión construida con \textit{bind} en el tipo del campo \AgdaField{idl} de \AgdaRecord{MonoidalFunctor} y luego se reducen las aplicaciones, se obtiene el tipo del campo \AgdaField{idl} de \AgdaRecord{ConcurrentMonad}. Este representa la propiedad que postula que \AgdaField{unit} es neutro a izquierda del operador \AgdaField{merge}. 
+De manera análoga, si se reemplaza \AgdaField{fmap} por su versión construida con \textit{bind} en el tipo del campo \AgdaField{idl} de \AgdaRecord{MonoidalFunctor} y luego se reducen las aplicaciones, se obtiene el tipo del campo \AgdaField{idl} de \AgdaRecord{ConcurrentMonad}. Este representa la propiedad que postula que \AgdaFunction{unit} es neutro a izquierda del operador \AgdaField{merge}. 
 
 La última de estas tres propiedades, \AgdaField{assoc}, representa la asociatividad del operador \AgdaField{merge}. En la estructura de funtor monoidal esta ley estaba definida con el siguiente tipo:
 \begin{center}
 \AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ (\AgdaField{fmap} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) (\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c})) \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
 \end{center}
 
-Reemplazando \AgdaField{fmap} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) por la función equivalente a \AgdaField{fmap}, donde la $f$ sería sustituída por la función (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}), el tipo queda como sigue:
+Reemplazando \AgdaField{fmap} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) por la función equivalente a \AgdaField{fmap}, donde la $f$ se sustituye por la función (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}), el tipo queda como sigue:
 \begin{center}
 \AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ ((\AgdaSymbol{$\lambda$} \AgdaBound{ma} \AgdaSymbol{$\rightarrow$} \AgdaBound{ma} \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \AgdaBound{a} \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\}) \AgdaBound{a})) (\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c})) \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
 \end{center}
@@ -202,9 +202,9 @@ Se puede reducir ahora el lado izquierdo de la ecuación, reemplazando la variab
 \AgdaSymbol{$\forall$} \{\AgdaBound{A B C} \AgdaSymbol{:} \AgdaPrimitiveType{Set}\} \AgdaSymbol{$\rightarrow$} (\AgdaBound{a} \AgdaSymbol{:} \AgdaBound{M A}) (\AgdaBound{b} \AgdaSymbol{:} \AgdaBound{M B}) (\AgdaBound{c} \AgdaSymbol{:} \AgdaBound{M C}) \AgdaSymbol{$\rightarrow$} \\ ((\AgdaField{merge} (\AgdaField{merge} \AgdaBound{a b}) \AgdaBound{c}) \AgdaField{$\gg=$} (\AgdaSymbol{$\lambda$} \{((\AgdaBound{a} \AgdaInductiveConstructor{,} \AgdaBound{b}) \AgdaInductiveConstructor{,} \AgdaBound{c}) \AgdaSymbol{$\rightarrow$} \AgdaField{return} (\AgdaBound{a} \AgdaInductiveConstructor{,} (\AgdaBound{b} \AgdaInductiveConstructor{,} \AgdaBound{c}))\})) \AgdaField{$\cong_m$} (\AgdaField{merge} \AgdaBound{a} (\AgdaField{merge} \AgdaBound{b c}))
 \end{center}
 
-Como se mencionó anteriormente, para que la mónada sea una mónada monoidal ordenada, esta debe contar con una estructura de funtor monoidal simétrico. Para que sea simétrico, además de las leyes que se probaron sobre la estructura monoidal, debe haber una propiedad extra: la conmutatividad del operador \AgdaField{merge}. Esta propiedad se representa con el campo \AgdaField{comm}. El tipo de este campo se construye de manera similar al anterior, donde de un lado se tiene simplemente (\AgdaField{merge} \AgdaBound{a b}), y del otro se aplica (\AgdaField{merge} \AgdaBound{b a}) seguido de una aplicación de \AgdaField{$\gg=$} con una función que da vuelta el orden del producto cartesiano. 
+Como se mencionó anteriormente, para que la mónada sea una mónada monoidal ordenada, esta debe contar con una estructura de funtor monoidal simétrico. Para que sea simétrico, además de las leyes que se probaron sobre la estructura monoidal, debe demostrarse una propiedad extra: la conmutatividad del operador \AgdaField{merge}. Esta propiedad se representa con el campo \AgdaField{comm}. El tipo de este campo se construye de manera similar al anterior, donde de un lado se tiene simplemente (\AgdaField{merge} \AgdaBound{a b}), y del otro se aplica (\AgdaField{merge} \AgdaBound{b a}) seguido de una aplicación de \AgdaField{$\gg=$} con una función que da vuelta el orden del producto cartesiano. 
 
-Queda por analizar el último campo de la estructura, el cual postula la relación que deben tener los operadores \AgdaField{$\gg=$} y \AgdaField{merge} para que la mónada sea concurrente. Este se denomina \AgdaField{ichange} y representa la ley de intercambio. Sean \AgdaBound{a$'$} $:$ $\mathbf{1} \rightarrow \mathit{M} A$, \AgdaBound{b$'$} $:$ $\mathbf{1} \rightarrow \mathit{M} B$, \AgdaBound{f} $:$ $A \rightarrow \mathit{M} C$ y \AgdaBound{g} $:$ $B \rightarrow \mathit{M} D$. {\color{red} Comentario: puse que a' y b' sean $1 \rightarrow M X$ porque en la formalización en realidad son directamente $M X$, pero en la teoría la ley se da con todas funciones. Cierra todo pero queda medio sin justificar por qué inicialmente los tomo así y no como funciones cualesquiera, como podría mejorar esto?} En la definición \ref{def:monconc}, se presenta la ley de intercambio de la siguiente manera: $(f \star g) \bullet (a' \star b') \sqsubseteq (f \bullet a') \star (g \bullet b')$, donde $f \star g = m \circ (f \times g)$ y $f \bullet g = f^* \circ g$. Esta ley se puede reescribir entonces como:
+Queda por analizar el último campo de la estructura, el cual postula la relación que deben tener los operadores \AgdaField{$\gg=$} y \AgdaField{merge} para que la mónada sea concurrente. Este se denomina \AgdaField{ichange} y representa la ley de intercambio. Sean \AgdaBound{a$'$} $:$ $\mathbf{1} \rightarrow \mathit{M} A$, \AgdaBound{b$'$} $:$ $\mathbf{1} \rightarrow \mathit{M} B$, \AgdaBound{f} $:$ $A \rightarrow \mathit{M} C$ y \AgdaBound{g} $:$ $B \rightarrow \mathit{M} D$ (pueden tomarse \AgdaBound{a$'$} y \AgdaBound{b$'$} como funciones que salen del conjunto $\mathbf{1}$ debido a las características de la categroría \textbf{Set}). En la definición \ref{def:monconc}, se presenta la ley de intercambio de la siguiente manera: $(f \star g) \bullet (a' \star b') \sqsubseteq (f \bullet a') \star (g \bullet b')$, donde $f \star g = m \circ (f \times g)$ y $f \bullet g = f^* \circ g$. Esta ley se puede reescribir entonces como:
 \begin{equation*}
 (m \circ (f \times g))^* \circ (m \circ (a' \times b')) \sqsubseteq (m \circ ((f^* \circ a') \times (g^* \circ b')))
 \end{equation*}
