preparo codigo para ultima parte

--- a/doc/sty/unicode.sty
+++ b/doc/sty/unicode.sty
@@ -5,6 +5,7 @@
 \DeclareUnicodeCharacter{737}{\ensuremath{^l}}
 \DeclareUnicodeCharacter{8988}{\ensuremath{\ulcorner}}
 \DeclareUnicodeCharacter{8989}{\ensuremath{\urcorner}}
+\DeclareUnicodeCharacter{8347}{\ensuremath{_s}}
 
 \newcommand{\texteta}{\ensuremath{\eta}}
 \newcommand{\textalpha}{\ensuremath{\alpha}}
