--- a/doc/tex/casodelay.tex
+++ b/doc/tex/casodelay.tex
@@ -783,3 +783,18 @@ Finalmente, se puede construir la instancia de \AgdaRecord{ConcurrentMonoid} par
 
 \subsection{Prueba alternativa de que \textit{delay} es una mónada concurrente}
 
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{funtor}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{module}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{eq}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{orden}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monad}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{bindcomp}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monadprops}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monoidal}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{mergecomp}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{monoidalprops}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{mergecomm}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{ichange}
+\ExecuteMetaData[latex/ConcMonoid-ConcMonad.tex]{proof}
+
+\ExecuteMetaData[latex/Instances/AltConcurrentMonad.tex]{altconcurrent}
